cloudformation/cpHost.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Instance with vpc to host cloud computing A2 Python Flask apps",
    "Parameters": {
        "VpcId" : {
            "Description" : "The VPC instance going to launch in",
            "Type" : "AWS::EC2::VPC::Id"
        },
        "ImageId": {
            "Description": "The AMI ID to use to launch the instance",
            "Type": "AWS::EC2::Image::Id",
            "Default" : "ami-07a3bd4944eb120a0"
        },
        "InstanceType": {
            "Description": "Type of the instance",
            "Type": "String",
            "Default": "t2.micro"
        },
        "KeyName": {
            "Description": "Key pair to install by default",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default": "AWS::NoValue"
        },
        "SubnetId": {
            "Description": "The Id of the subnet the instance is going to be launched to",
            "Type": "AWS::EC2::Subnet::Id"
        },
        "TrustedOrigin" : {
            "Type": "String",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "Must be within these CIRD range",
            "Description": "Allow connections from this address",
            "MaxLength": "18",
            "MinLength": "9"
        }
    },
    "Resources": {
        "Eip" : {
            "Type" : "AWS::EC2::EIP",
            "Properties" : {
                "InstanceId" : { "Ref" : "Instance" },
                "Domain" : "vpc"
            }
        },
        "Instance": {
            "Type" : "AWS::EC2::Instance",
            "Properties" : {
                "ImageId" : { "Ref": "ImageId" },
                "InstanceType" : { "Ref": "InstanceType" },
                "KeyName" : { "Ref": "KeyName" },
                "SubnetId" : { "Ref" : "SubnetId" },
                "SecurityGroupIds" : [ { "Ref" : "SecurityGroup" } ],
                "UserData" : {
                    "Fn::Base64" : {
                        "Fn::Join" : ["",
                            [
                                "#!/bin/bash\n",
                                "set -xeuo pipefail\n",
                                "sudo apt-get -y update\n"
                            ]
                        ]
                    }
                }
            }
        },
        "SecurityGroup" : {
            "Type" : "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "SSH, ICMP, HTTP, HTTPS and 3000/TCP",
                "VpcId": { "Ref": "VpcId" },
                "SecurityGroupIngress": [
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "5000",
                        "IpProtocol": "tcp",
                        "ToPort": "5000"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "3000",
                        "IpProtocol": "tcp",
                        "ToPort": "3000"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "InstanceId": {
            "Description": "The Id of the created instance",
            "Value": { "Ref": "Instance" }
        },
        "PrivateDnsName": {
            "Description": "The private DNS name assigned to the instance",
            "Value": { "Fn::GetAtt": [ "Instance", "PrivateDnsName" ] }
        },
        "PublicDnsName": {
            "Description": "The public DNS name assigned to the instance",
            "Value": { "Fn::GetAtt": [ "Instance", "PublicDnsName" ] }
        }
    }
}
