cloudformation/cpMaster.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "t2 Medium Instance with REHL 7.5 with elastic IP adress, added proper port for puppet master",
    "Parameters": {
        "VpcId" : {
            "Description" : "The VPC instance in",
            "Type" : "AWS::EC2::VPC::Id"
        },
        "ImageId": {
            "Description": "The AMI ID to use to launch the instance",
            "Type": "AWS::EC2::Image::Id",
            "Default" : "ami-67589505"
        },
        "InstanceType": {
            "Description": "Type of the instance",
            "Type": "String",
            "Default": "t2.medium"
        },
        "KeyName": {
            "Description": "Key pair to install by default",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default": "AWS::NoValue"
        },
        "SubnetId": {
            "Description": "The Id of the subnet the instance is going to be launched to",
            "Type": "AWS::EC2::Subnet::Id"
        },
        "TrustedOrigin" : {
            "Type": "String",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "Must be within these CIDR range",
            "Description": "Restrict connection from these address",
            "MaxLength": "18",
            "MinLength": "9"
        }
    },
    "Resources": {
        "Eip" : {
            "Type" : "AWS::EC2::EIP",
            "Properties" : {
                "InstanceId" : { "Ref" : "Instance" },
                "Domain" : "vpc"
            }
        },
        "Instance": {
            "Type" : "AWS::EC2::Instance",
            "Properties" : {
                "ImageId" : { "Ref": "ImageId" },
                "InstanceType" : { "Ref": "InstanceType" },
                "KeyName" : { "Ref": "KeyName" },
                "SubnetId" : { "Ref" : "SubnetId" },
                "SecurityGroupIds" : [ { "Ref" : "SecurityGroup" } ],
                "BlockDeviceMappings" : [
                    {
                        "DeviceName" : "/dev/sda1",
                        "Ebs" : { "VolumeSize" : "15" }
                    }
                ],
                "Tags" : [
                    {
                        "Key" : "Name",
                        "Value" : "puppet-master"
                    }
                ],
                "UserData" : {
                    "Fn::Base64" : {
                        "Fn::Join" : ["",
                            [
                                "#!/bin/bash\n",
                                "sudo yum update -y\n"
                            ]
                        ]
                    }
                }
            }
        },
        "SecurityGroup" : {
            "Type" : "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "SSH, ICMP, HTTP, HTTPS 3000/TCP and 8140, 61613 for Puppet Master, 8080 for web apps",
                "VpcId": { "Ref": "VpcId" },
                "SecurityGroupIngress": [
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "3000",
                        "IpProtocol": "tcp",
                        "ToPort": "3000"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "8140",
                        "IpProtocol": "tcp",
                        "ToPort": "8140"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "61613",
                        "IpProtocol": "tcp",
                        "ToPort": "61613"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "8080",
                        "IpProtocol": "tcp",
                        "ToPort": "8080"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "4433",
                        "IpProtocol": "tcp",
                        "ToPort": "4433"
                    },
                    {
                        "CidrIp" : { "Ref" : "TrustedOrigin" },
                        "FromPort": "4435",
                        "IpProtocol": "tcp",
                        "ToPort": "4435"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "InstanceId": {
            "Description": "The Id of the created instance",
            "Value": { "Ref": "Instance" },
        "PrivateDnsName": {
            "Description": "The private DNS name assigned to the instance",
            "Value": { "Fn::GetAtt": [ "Instance", "PrivateDnsName" ] }
        },
        "PublicDnsName": {
            "Description": "The public DNS name assigned to the instance",
            "Value": { "Fn::GetAtt": [ "Instance", "PublicDnsName" ] }
        }
    }
}
